--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "~1.32.11",
-        "sass-loader": "~11.0.1",
-        "react-router-dom": "^5.3.0"
+        "sass-loader": "~11.0.1"
     }
 }
